--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react-router": "^0.11.6",
     "react": "~0.12.2",
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "moment": "2.10.2"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
